2003-06-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el (w3mhack-shimbun-modules-using-rss): New function.
	(w3mhack-examine-modules): Call the above instead of a literal
	list.

2003-06-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* doc/Makefile.in (install): Don't run install-info for non-
	existent info files.

	* w3mhack.el (w3mhack-examine-modules): Also examine
	"sb-pukiwiki-rss.el".

2003-06-20  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-rss.el (shimbun-rss-build-message-id): Add new arg
	DATE.
	(shimbun-get-headers): Call `shimbun-rss-build-message-id' with
	new arg DATE.

	* shimbun/sb-bbc-rss.el (shimbun-rss-build-message-id): Add new
	arg DATE.
	* shimbun/sb-slashdot-jp-rss.el (shimbun-rss-build-message-id): Ditto.
	* shimbun/sb-cnet-rss.el (shimbun-rss-build-message-id): Ditto.
	* shimbun/sb-atmarkit-rss.el (shimbun-rss-build-message-id): Ditto.

	* shimbun/sb-pukiwiki-rss.el: New file.

2003-06-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-x-face): Renew.

	* shimbun/sb-mainichi.el (shimbun-get-headers): Enrich subjects.

2003-06-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-namazu.el (w3m-namazu-complete-index): Consider `predicate'
	option.

	* w3m-weather.el (w3m-weather-completion-table): Add `oki' as the
	shortend form of `shimanekenoki'.

2003-06-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-fontify-anchors): Do not encode fragment parts.

2003-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-examine-modules): Ignore the shimbun modules
	which need xml.el if it is not available.

2003-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-get-headers): Don't use
	`save-match-data'
	* shimbun/sb-gnome.el (shimbun-get-headers): Ditto.
	* shimbun/sb-yomiuri.el (shimbun-yomiuri-get-headers): Ditto.

2003-06-18  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/shimbun.el (shimbun-mime-encode-string): Use
	`save-match-data'.
